gfx/layers/ipc/CompositorBridgeParent.cpp
@@ -2555,15 +2555,6 @@ bool CompositorBridgeParent::IsSameProcess() const {
   return OtherPid() == base::GetCurrentProcId();
 }
 
-void CompositorBridgeParent::NotifyWebRenderContextPurge() {
-  MOZ_ASSERT(CompositorThread()->IsOnCurrentThread());
-  if (!mWrBridge) {
-    return;
-  }
-  RefPtr<wr::WebRenderAPI> api = mWrBridge->GetWebRenderAPI();
-  api->ClearAllCaches();
-}
-
 void CompositorBridgeParent::NotifyWebRenderDisableNativeCompositor() {
   MOZ_ASSERT(CompositorThread()->IsOnCurrentThread());
   if (mWrBridge) {
